# EmbeddedDevelopment

./: .gitignore  01.How to use git and github.md  README.md
CMake/0.How A cpp run?/: 0.How a cpp run?.md
CMake/1.CompilationProcess/: 1.CompilationProcess.md
CMake/2.CMakeLanguage/: CMakeLanguage.md
CMake/2.CMakeLists语句/: CMakeLists.md
CMake/3.一个工程/: 工程怎样构建.md
CMake/example1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CMake/example3/: CMakeLists.txt
CMake/example3/src/: CMakeLists.txt  main.cpp
Git/: README.md
OpenCV/0.Go Into the OpenCV Door/: 0.Go Into the OpenCV Door.md  CMakeLists.txt  OpenCV00.cpp
OpenCV/1.Basic Knowledge/: 1.Basic Knowledge.md
OpenCV/1.Basic Knowledge/Project01/: CMakeLists.txt  make.sh  project01.cpp
OpenCV/1.Basic Knowledge/Project02/: CMakeLists.txt  project02.cpp
OpenCV/1.Basic Knowledge/Project03/: CMakeLists.txt  project03.cpp
OpenCV/1.Basic Knowledge/Project04/: CMakeLists.txt  project04.cpp
OpenCV/2.Learning GUI/: 2.Learning GUI.md  Learning GUI.md
OpenCV/3.Drawing, Filters and Transforms/: 3.1Drawing.md  3.2Filters.md  3.3Transforms.md  Conclusion and Exercise.md  README.md
Python/1.Basics/: basics.md  pythonRead.txt  tt.py
Python/2.Exception/: Exception.md
Python/3.FilesIO/: FilesIO.md  test.py  test.txt
Python/4.Database/sqlite3/: Database.md  sqlite3_database.py  sqlite3_first.db
Python/5.PyQt/: PyQt.md  test.py
Python/6.Task/: Task.md
Python/7.Project/: README.md  main.py
Python/7.Project/ui/: DBM.py  login.db  (+2 more)
Python/8.face_recognition/: 8.an_example.md  face_recog.py
